--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 # requirements.txt
-streamlit==1.44.1
-fastapi==0.115.12
-uvicorn==0.34.0
-python-multipart==0.0.9
+streamlit
+fastapi
+uvicorn
+python-multipart
 langchain
-chromadb==0.6.3
-sentence-transformers==4.0.2
+chromadb
+sentence-transformers
 torch==2.5.1
-transformers==4.50.3
-pypdf==4.1.0
-python-docx==1.1.0
-docx2txt==0.8
-tiktoken==0.6.0
-numpy==1.26.4
-tqdm==4.66.2
-python-dotenv==1.0.1
-pydantic==2.6.3
-plotly==6.0.1
-huggingface_hub==0.30.1
-accelerate==0.27.2
-bitsandbytes==0.41.1
-timm==1.0.13
-tokenizers==0.21.1
+transformers
+pypdf
+python-docx
+docx2txt
+tiktoken
+numpy
+tqdm
+python-dotenv
+pydantic
+plotly
+huggingface_hubp
+accelerate
+bitsandbytes
+timm
+tokenizers
 deepeval
 datasets
